- correction des alignements verticaux d'images et textes sur le niveaux 1 : s'adapte suivant la hauteur du menu
git-svn-id: svn://zone.spip.org/spip-zone/_plugins_@75322 ac52e18a-acf5-0310-9fe8-c4428f23b10a

--- a/boussole/trunk/css/boussole_topnav.less
+++ b/boussole/trunk/css/boussole_topnav.less
@@ -43,8 +43,11 @@ http://romy.tetue.net/selecteurs-conditionnels-pour-ie
         color   :  @1linkColor;
         font-family: @spipFont;
         font-size: 16px;
+        &:hover,&:active,&:focus{
+            background: none;
+        }
     }
-    > ul > li:hover > a {
+    > ul > li:hover {
         background-color: @spipMauve ;   
     }
     ul.menu_submenu_block li a:hover {
@@ -80,27 +83,26 @@ http://romy.tetue.net/selecteurs-conditionnels-pour-ie
     width: 100%;
     height: inherit;
     > li {
-        display: block;
         float: left;
         padding: 0px;
         margin: 0px;
         text-align: left;
+        border-right: 1px solid rgba(255, 255, 255, 0.25);
+        .box-shadow(-1px 0px 0px rgba(0, 0, 0, 0.2) inset);
+        transition: background-color 200ms linear 0s;
     }
     > li > a {
-        padding: 12px 15px;
-        height : (@menuContainerHeight - (12px*2)); // on calcule pour quand il n'y a pas de texte et juste une image
-        display: block;
+        padding: 0 15px;
+        line-height : @menuContainerHeight ;
+        vertical-align: middle;
         color: rgb(255, 255, 255);
         text-decoration: none;
-        .box-shadow(-1px 0px 0px rgba(0, 0, 0, 0.2) inset);
-        border-right: 1px solid rgba(255, 255, 255, 0.25);
         text-shadow: 0px 1px 2px rgba(0, 0, 0, 0.25);
-        transition: background-color 200ms linear 0s;
         font-size: 13px;
         font-family: @spipFont ;
-        > img{
-            float : left;
+        > img {
             margin-right:10px;
+            vertical-align: middle;
         }
     }
     > li.right {
@@ -112,14 +114,8 @@ http://romy.tetue.net/selecteurs-conditionnels-pour-ie
     }
     > li:hover {
         margin-left: -1px;
-        > a {
-            box-shadow: 2px 0px 10px -5px rgba(0, 0, 0, 0.6) inset, -2px 0px 10px -5px rgba(0, 0, 0, 0.6) inset;
-        }
-        > a.icn_home {
-            box-shadow: none;
-            padding-left: 0;
-            border-right : 1px solid #383838;
-        }
+        box-shadow: 2px 0px 10px -5px rgba(0, 0, 0, 0.6) inset, -2px 0px 10px -5px rgba(0, 0, 0, 0.6) inset;
+        cursor: pointer;
     }
     // Sous Menus
     > li > .menu_dropdown_block {
@@ -135,7 +131,7 @@ http://romy.tetue.net/selecteurs-conditionnels-pour-ie
         -moz-border-bottom-colors: none;
         -moz-border-left-colors: none;
         border-image: none;
-        box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.2);
+       .box-shadow(1px 1px 3px rgba(0, 0, 0, 0.2));
         background: none repeat scroll 0% 0% rgb(255, 255, 255);
         top: 100%;
         color: rgb(87, 87, 87);
